# hydro-email

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  Taskfile.yml
backend/chains/: start_neutron.sh
backend/docker/: ipfs.yml  wavs-aggregator.yml  wavs-operator.yml  wavs-telemetry.yml
backend/wavs-home/: wavs.toml
builds/deployments/: aggregator-submitter-cid.json  operator-email-reader-cid.json  service-handler-code-id.json
docs/: Codebase.md  Credentials.md  GettingStarted.md  LocalEmail.md  Remote.md  Spam.md  Tooling.md
frontend/: oauth.html
src/: config.rs  connection.rs  email.rs  error.rs  lib.rs
src/email/: auth.rs  parser.rs  verify.rs
taskfile/: backend.yml  components.yml  config.yml  contracts.yml  deploy.yml  oauth.yml  test.yml
wavs-home/: wavs.toml
